Add ability to exit server remotely

--- a/build
+++ b/build
@@ -1,4 +1,4 @@
 #
 javac --release 8 org/jibble/simplewebserver/*.java
-jar -c -m META-INF/MANIFEST.MF -f SimpleWebServer.jar
+jar -c -m META-INF/MANIFEST.MF -f SimpleWebServer.jar org
 
